een ronde kan worden gespeeld de beurt wordt correct beïndigd
enige probleem is dat de zetstenen niet perfect staan